SERVER-8296 Print more useful information when pipe call fails in ProgramRunner::start